[releng] Fixed emf-gen cleanup
Change-Id: Ic466f7a5fb13d31055a5732e484d20bb6b753cfa

--- a/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
+++ b/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
@@ -38,6 +38,15 @@
 							<filesets>
 								<fileset><!-- EMF generator workspace -->
 									<directory>${emf.workspace.location}</directory>
+									<includes>
+										<include></include>
+									</includes>
+									<excludes>
+										<exclude>.gitignore</exclude>
+									</excludes>
+								</fileset>
+								<fileset><!-- EMF generated code -->
+									<directory>emf-gen</directory>
 									<excludes>
 										<exclude>.gitignore</exclude>
 									</excludes>
