[470151] Added MWE2 VIATRA integration API.
Change-Id: I8a3795d5388a1d81ffd4f14993b409827a8fea60
Signed-off-by: Peter Lunk <lunk.peter@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -189,10 +189,12 @@
 				<module>../../plugins/org.eclipse.viatra.dse.designspace.pathfinding</module>
 				<module>../../plugins/org.eclipse.viatra.dse.genetic</module>
 				<module>../../plugins/org.eclipse.viatra.dse.monitor</module>
+				<module>../../plugins/org.eclipse.viatra.emf.mwe2integration</module>
 				<module>../../tests/org.eclipse.viatra.cep.core.tests.compiler</module>
 				<module>../../tests/org.eclipse.viatra.cep.core.tests.compiler.testdata</module>
 				<module>../../tests/org.eclipse.viatra.cep.vepl.tests</module>
 				<module>../../tests/org.eclipse.viatra.cep.tests.integration</module>
+				<module>../../tests/org.eclipse.viatra.emf.mwe2integration.test</module>
 				<module>../../features/org.eclipse.viatra.emf.runtime.feature</module>
 				<module>../../features/org.eclipse.viatra.cep.feature</module>
 				<module>../../features/org.eclipse.viatra.dse.feature</module>
