--- a/plugins/org.eclipse.incquery.viewmodel/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewmodel/plugin.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><?eclipse version="3.4"?><plugin>
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <!-- @generated traceability -->
-      <package
-            uri="http://org.eclipse.incquery/viewmodel/traceability/1.0"
-            class="org.eclipse.incquery.viewmodel.traceability.TraceabilityPackage"
-            genModel="model/traceability.genmodel"/>
-   </extension>
-  <extension point="org.eclipse.emf.ecore.extension_parser">
-    <parser class="org.eclipse.incquery.viewmodel.resource.NotPersistableResourceFactory" type="not_persistable_model"/>
+  <extension point="org.eclipse.emf.ecore.generated_package">
+    <!-- @generated traceability -->
+    <package class="org.eclipse.incquery.viewmodel.traceability.TraceabilityPackage" genModel="model/traceability.genmodel" uri="http://org.eclipse.incquery/viewmodel/traceability/1.0"/>
   </extension>
   <extension id="org.eclipse.incquery.viewmodel.traceability.patterns.Helpers" point="org.eclipse.incquery.runtime.queryspecification">
     <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.incquery.viewmodel.traceability.patterns.Helpers" id="org.eclipse.incquery.viewmodel.traceability.patterns.Helpers"/>
