--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>org.eclipse.viatra.parent</artifactId>
 	<name>VIATRA EMF Support</name>
 	<url>http://eclipse.org/viatra2</url>
-	<version>0.7.0-SNAPSHOT</version>
+	<version>0.8.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>../../plugins/org.eclipse.viatra.emf.runtime</module>
@@ -51,7 +51,7 @@
 						<artifact>
 							<groupId>org.eclipse.viatra</groupId>
 							<artifactId>org.eclipse.viatra.target</artifactId>
-							<version>0.7.0-SNAPSHOT</version>
+							<version>${project.version}</version>
 						</artifact>
 					</target>
 					<ignoreTychoRepositories>true</ignoreTychoRepositories>
