--- a/plugins/org.eclipse.viatra.cep.core/plugin.xml
+++ b/plugins/org.eclipse.viatra.cep.core/plugin.xml
@@ -2,4 +2,7 @@
   <extension id="org.eclipse.viatra.cep.core.engine.runtime.EvaluationPatterns" point="org.eclipse.incquery.runtime.queryspecification">
     <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.cep.core.engine.runtime.EvaluationPatterns" id="org.eclipse.viatra.cep.core.engine.runtime.EvaluationPatterns"/>
   </extension>
+  <extension id="org.eclipse.viatra.cep.core.engine.compiler.AutomatonRewritePatterns" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.cep.core.engine.compiler.AutomatonRewritePatterns" id="org.eclipse.viatra.cep.core.engine.compiler.AutomatonRewritePatterns"/>
+  </extension>
 </plugin>
