Fixed editor hyperlinking issue
Change-Id: Ida627333940e9d6e9cef3e0b44b7f84d08837969
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/plugins/org.eclipse.viatra.cep.vepl.ui/plugin.xml
+++ b/plugins/org.eclipse.viatra.cep.vepl.ui/plugin.xml
@@ -10,7 +10,7 @@
             default="true"
             extensions="vepl"
             icon="icons/cep.jpg"
-            id="org.eclipse.viatra.cep.vepl.EventProcessingLanguage"
+            id="org.eclipse.viatra.cep.vepl.Vepl"
             matchingStrategy="org.eclipse.viatra.cep.vepl.ui.VeplExecutableExtensionFactory:org.eclipse.xtext.xbase.ui.editor.JavaEditorInputMatcher"
             name="EventProcessingLanguage Editor">
         </editor>
