Added pom.xml to test plugin
Change-Id: Ib97b791d54058fd9b7b63b7e1cfc176a4e7d98e1
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -189,6 +189,7 @@
 				<module>../../plugins/org.eclipse.viatra.dse.designspace.pathfinding</module>
 				<module>../../plugins/org.eclipse.viatra.dse.genetic</module>
 				<module>../../plugins/org.eclipse.viatra.dse.monitor</module>
+				<module>../../tests/org.eclipse.viatra.cep.core.tests.mtcompiler</module>
 				<module>../../tests/org.eclipse.viatra.cep.vepl.tests</module>
 				<module>../../tests/org.eclipse.viatra.cep.tests.integration</module>
 				<module>../../features/org.eclipse.viatra.emf.runtime.feature</module>
