--- a/tests/org.eclipse.viatra.cep.core.tests.mtcompiler/pom.xml
+++ b/tests/org.eclipse.viatra.cep.core.tests.mtcompiler/pom.xml
@@ -8,7 +8,7 @@
     <version>0.8.0-SNAPSHOT</version>
     <relativePath>../../releng/org.eclipse.viatra.parent/pom.xml</relativePath>
   </parent>
-  <artifactId>org.eclipse.viatra.cep.tests.mtcompiler</artifactId>
+  <artifactId>org.eclipse.viatra.cep.core.tests.mtcompiler</artifactId>
   <packaging>eclipse-test-plugin</packaging>
   <properties>
 		<vmargs>-Xmx1024m -XX:MaxPermSize=512m</vmargs>
