--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -190,6 +190,7 @@
 				<module>../../plugins/org.eclipse.viatra.dse.genetic</module>
 				<module>../../plugins/org.eclipse.viatra.dse.monitor</module>
 				<module>../../tests/org.eclipse.viatra.cep.core.tests.mtcompiler</module>
+				<module>../../tests/org.eclipse.viatra.cep.core.tests.mtcompiler.testdata</module>
 				<module>../../tests/org.eclipse.viatra.cep.vepl.tests</module>
 				<module>../../tests/org.eclipse.viatra.cep.tests.integration</module>
 				<module>../../features/org.eclipse.viatra.emf.runtime.feature</module>
