Fixed module packaging
Change-Id: I09ede602b6ade05f27cbeb2c82a2d28b153078c4
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/tests/org.eclipse.viatra.cep.core.tests.mtcompiler.testdata/pom.xml
+++ b/tests/org.eclipse.viatra.cep.core.tests.mtcompiler.testdata/pom.xml
@@ -9,8 +9,18 @@
     <relativePath>../../releng/org.eclipse.viatra.parent/pom.xml</relativePath>
   </parent>
   <artifactId>org.eclipse.viatra.cep.core.tests.mtcompiler.testdata</artifactId>
-  <packaging>eclipse-test-plugin</packaging>
+  <packaging>eclipse-plugin</packaging>
   <properties>
 		<vmargs>-Xmx1024m -XX:MaxPermSize=512m</vmargs>
   </properties>
+  <build>
+		<resources>
+			<resource>
+				<directory>src</directory>
+			</resource>
+			<resource>
+				<directory>src-gen</directory>
+			</resource>
+		</resources>
+	</build>
 </project>
