--- a/plugins/org.eclipse.viatra.cep.core/plugin.xml
+++ b/plugins/org.eclipse.viatra.cep.core/plugin.xml
@@ -11,4 +11,10 @@
   <extension id="org.eclipse.viatra.cep.core.engine.runtime.RuntimePatterns" point="org.eclipse.incquery.runtime.queryspecification">
     <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.cep.core.engine.runtime.RuntimePatterns" id="org.eclipse.viatra.cep.core.engine.runtime.RuntimePatterns"/>
   </extension>
+  <extension id="org.eclipse.viatra.cep.core.engine.compiler.MappingPatterns" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.cep.core.engine.compiler.MappingPatterns" id="org.eclipse.viatra.cep.core.engine.compiler.MappingPatterns"/>
+  </extension>
+  <extension id="org.eclipse.viatra.cep.core.engine.compiler.OptimizationPatterns" point="org.eclipse.incquery.runtime.queryspecification">
+    <group group="org.eclipse.incquery.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.cep.core.engine.compiler.OptimizationPatterns" id="org.eclipse.viatra.cep.core.engine.compiler.OptimizationPatterns"/>
+  </extension>
 </plugin>
