--- a/tests/org.eclipse.viatra.cep.core.tests.mtcompiler/build.properties
+++ b/tests/org.eclipse.viatra.cep.core.tests.mtcompiler/build.properties
@@ -1,5 +1,6 @@
-source.. = src/,\
-           xtend-gen/
-output.. = bin/
 bin.includes = META-INF/,\
                .
+source.. = src/,\
+           xtend-gen/,\
+           src-gen/
+output.. = bin/
