[474142] Added feature project for the MWE 2 library.
Change-Id: I8e85093e5c478ae003c883c38730314cf80963a5
Signed-off-by: Peter Lunk <lunk.peter@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -196,6 +196,7 @@
 				<module>../../tests/org.eclipse.viatra.cep.tests.integration</module>
 				<module>../../tests/org.eclipse.viatra.emf.mwe2integration.test</module>
 				<module>../../features/org.eclipse.viatra.emf.runtime.feature</module>
+				<module>../../features/org.eclipse.viatra.emf.mwe2integration.feature</module>
 				<module>../../features/org.eclipse.viatra.cep.feature</module>
 				<module>../../features/org.eclipse.viatra.dse.feature</module>
 				<module>../../releng/org.eclipse.viatra.update</module>
