--- a/plugins/org.eclipse.incquery.facet.browser/plugin.xml
+++ b/plugins/org.eclipse.incquery.facet.browser/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.core.runtime.adapters">
       <factory
-            adaptableType="org.eclipse.emf.facet.infra.browser.editors.EcoreBrowser"
+            adaptableType="org.eclipse.gmt.modisco.infra.browser.editors.EcoreBrowser"
             class="org.eclipse.incquery.facet.browser.ModelConnectorAdapterFactoryForFacet">
          <adapter
                type="org.eclipse.incquery.tooling.ui.queryexplorer.IModelConnector">
