Configure target Java version of Xtend compiler properly

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -185,6 +185,7 @@
 					<configuration>
 						<!-- need to prefix by basedir to generate to currently built module -->
 						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
+						<javaSourceVersion>${java.version}</javaSourceVersion>
 					</configuration>
 				</plugin>
 			</plugins>
