--- a/bpm/org.eclipse.incquery.examples.bpm.test.parent/pom.xml
+++ b/bpm/org.eclipse.incquery.examples.bpm.test.parent/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.incquery.examples.bpm.test.parent</artifactId>
 	<name>EMF-IncQuery BPM Example</name>
-	<version>1.0.0-SNAPSHOT</version>
-	<url>http://incquery.net</url>
+	<version>1.1.0-SNAPSHOT</version>
+	<url>http://eclipse.org/incquery</url>
 	<parent>
 		<artifactId>org.eclipse.incquery.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
