--- a/bpm/org.eclipse.incquery.examples.bpm/pom.xml
+++ b/bpm/org.eclipse.incquery.examples.bpm/pom.xml
@@ -8,6 +8,25 @@
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../org.eclipse.incquery.examples.bpm.test.parent/pom.xml</relativePath>
   </parent>
+  <properties>
+    <incquery.p2.repository>https://hudson.eclipse.org/incquery/job/incquery-master/lastSuccessfulBuild/artifact/update-site/</incquery.p2.repository>
+  </properties>
   <artifactId>org.eclipse.incquery.examples.bpm</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <repositories>
+    <repository>
+      <id>incquery-repository</id>
+      <layout>p2</layout>
+      <url>${incquery.p2.repository}</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>incquery-snapshots</id>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <url>https://repo.eclipse.org/content/repositories/emf-incquery-snapshots/</url>
+    </pluginRepository>
+  </pluginRepositories>
 </project>
