--- a/maven/incquery-patternlanguage/pom.xml
+++ b/maven/incquery-patternlanguage/pom.xml
@@ -13,11 +13,23 @@
 			<groupId>org.eclipse.incquery</groupId>
 			<artifactId>org.eclipse.incquery.patternlanguage</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+		        <exclusion>
+        		    <groupId>*</groupId>
+		            <artifactId>*</artifactId>
+			    </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.incquery</groupId>
 			<artifactId>org.eclipse.incquery.patternlanguage.emf</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+		        <exclusion>
+        		    <groupId>*</groupId>
+		            <artifactId>*</artifactId>
+			    </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
     	    <groupId>org.eclipse.xtext</groupId>
