--- a/maven/incquery-maven-plugin/pom.xml
+++ b/maven/incquery-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>incquery-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>EMF-IncQuery Maven Plug-in</name>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -25,9 +25,9 @@
 		</dependency>
 
 		<dependency>
-		<groupId>org.eclipse.core</groupId>
-		<artifactId>org.eclipse.core.resources</artifactId>
-		<version>3.7.100</version>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>org.eclipse.core.resources</artifactId>
+			<version>3.7.100</version>
 		</dependency>
 
 		<dependency>
@@ -72,4 +72,20 @@
 		<version>1.1.0-SNAPSHOT</version>
 		<relativePath>../../releng/org.eclipse.incquery.parent/pom.xml</relativePath>
 	</parent>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
