--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -191,6 +191,10 @@
 				<module>../../plugins/org.eclipse.viatra.dse.genetic</module>
 				<module>../../plugins/org.eclipse.viatra.dse.monitor</module>
 				<module>../../plugins/org.eclipse.viatra.emf.mwe2integration</module>
+				<module>../../plugins/org.eclipse.viatra.emf.mwe2integration.debug</module>
+				<module>../../plugins/org.eclipse.viatra.emf.runtime.debug</module>
+				<module>../../plugins/org.eclipse.viatra.emf.runtime.debug.ui</module>
+				<module>../../plugins/org.eclipse.viatra.emf.runtime.tracer</module>
 				<module>../../tests/org.eclipse.viatra.cep.core.tests.compiler</module>
 				<module>../../tests/org.eclipse.viatra.cep.core.tests.compiler.testdata</module>
 				<module>../../tests/org.eclipse.viatra.cep.vepl.tests</module>
