--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -176,6 +176,8 @@
 				</property>
 			</activation>
 			<modules>
+				<module>../../plugins/org.eclipse.viatra.emf.runtime.debug</module>
+				<module>../../plugins/org.eclipse.viatra.emf.runtime.debug.ui</module>
 				<module>../../plugins/org.eclipse.viatra.cep.core</module>
 				<module>../../plugins/org.eclipse.viatra.cep.core.metamodels</module>
 				<module>../../plugins/org.eclipse.viatra.cep.emf.notification</module>
