[462934] Added trace coder and executor implementation.
Change-Id: I4b1b64f7f477dcb5791b156434f65645738c3036
Signed-off-by: lunkpeter <lunk.peter@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -179,6 +179,7 @@
 				<module>../../plugins/org.eclipse.viatra.emf.runtime.debug</module>
 				<module>../../plugins/org.eclipse.viatra.emf.runtime.debug.ui</module>
 				<module>../../plugins/org.eclipse.viatra.emf.mwe2integration.debug</module>
+				<module>../../plugins/org.eclipse.viatra.emf.runtime.tracer</module>
 				<module>../../plugins/org.eclipse.viatra.cep.core</module>
 				<module>../../plugins/org.eclipse.viatra.cep.core.metamodels</module>
 				<module>../../plugins/org.eclipse.viatra.cep.emf.notification</module>
