[479311] LocalSearch support for QueryExplorer
QueryExplorer can execute queries using the LocalSearch backend
implementation.

Change-Id: I4752594bcb2091361a4f0a222ab848d1c4039aa1
bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=479311
Signed-off-by: Grill Balazs <balazs.grill@incquerylabs.com>

--- a/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
@@ -308,6 +308,9 @@
       <menuContribution
             allPopups="false"
             locationURI="toolbar:org.eclipse.incquery.tooling.ui.queryexplorer.QueryExplorer">
+         <control
+               class="org.eclipse.incquery.tooling.ui.queryexplorer.BackendSelectionControl">
+         </control>
          <command
                commandId="org.eclipse.incquery.tooling.ui.loadmodel"
                icon="icons/load.gif"
