--- a/plugins/org.eclipse.incquery.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.runtime/plugin.xml
@@ -2,4 +2,5 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension-point id="queryspecification" name="EMF-IncQuery Pattern Matcher" schema="schema/patternmatcher.exsd"/>
+   <extension-point id="surrogatequeryemf" name="EMF-IncQuery Surrogate Query" schema="schema/surrogatequeryemf.exsd"/>
 </plugin>
