[487446] Renamed query.runtime.generic feature to query.language

--- a/query/features/org.eclipse.viatra.query.language.feature/.project
+++ b/query/features/org.eclipse.viatra.query.language.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.viatra.query.runtime.generic.feature</name>
+	<name>org.eclipse.viatra.query.language.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
