--- a/query/features/org.eclipse.viatra.query.language.feature/pom.xml
+++ b/query/features/org.eclipse.viatra.query.language.feature/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.2.0-SNAPSHOT</version>
 		<relativePath>../../../releng/org.eclipse.viatra.parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>org.eclipse.viatra.query.runtime.generic.feature</artifactId>
+	<artifactId>org.eclipse.viatra.query.language.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 	<build>
 		<plugins>
