--- a/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
@@ -22,7 +22,7 @@
             class="org.eclipse.viatra.query.tooling.ui.QueryLanguageExecutableExtensionFactory:org.eclipse.viatra.query.tooling.ui.wizards.NewEiqFileWizard"
             finalPerspective="org.eclipse.pde.ui.PDEPerspective"
             icon="icons/logo2.png"
-            id="org.eclipse.viatra.query.tooling.ui.neweiqfile"
+            id="org.eclipse.viatra.query.tooling.ui.newvqlfile"
             name="EMF-IncQuery Query Definition "
             preferredPerspectives="org.eclipse.pde.ui.PDEPerspective,org.eclipse.jdt.ui.JavaPerspective">
       </wizard>
@@ -30,7 +30,7 @@
             category="org.eclipse.viatra.query.tooling.ui.category"
             class="org.eclipse.viatra.query.tooling.ui.QueryLanguageExecutableExtensionFactory:org.eclipse.viatra.query.tooling.ui.wizards.NewGenmodelWizard"
             icon="icons/logo2.png"
-            id="org.eclipse.viatra.query.tooling.ui.neweiqgenmodel"
+            id="org.eclipse.viatra.query.tooling.ui.newvqlgenmodel"
             name="EMF-IncQuery Generator Model"
             project="false">
       </wizard>
@@ -74,7 +74,7 @@
                relative="org.eclipse.ui.views.TaskList">
          </view>
          <newWizardShortcut
-               id="org.eclipse.viatra.query.tooling.ui.neweiqfile">
+               id="org.eclipse.viatra.query.tooling.ui.newvqlfile">
          </newWizardShortcut>
       </perspectiveExtension>
       <perspectiveExtension
@@ -86,14 +86,14 @@
                relative="org.eclipse.ui.views.TaskList">
          </view>
          <newWizardShortcut
-               id="org.eclipse.viatra.query.tooling.ui.neweiqfile">
+               id="org.eclipse.viatra.query.tooling.ui.newvqlfile">
          </newWizardShortcut>
       </perspectiveExtension>
    </extension>
    <extension
          point="org.eclipse.core.expressions.definitions">
       <definition
-            id="org.eclipse.viatra.query.tooling.ui.eiq.file">
+            id="org.eclipse.viatra.query.tooling.ui.vql.file">
          <with
                variable="selection">
             <iterate
@@ -102,7 +102,7 @@
                      type="org.eclipse.core.resources.IFile">
                   <test
                         property="org.eclipse.core.resources.name"
-                        value="*.eiq">
+                        value="*.vql">
                   </test>
                </adapt>
             </iterate>
@@ -262,11 +262,11 @@
       </handler>
       <handler
             class="org.eclipse.viatra.query.tooling.ui.QueryLanguageExecutableExtensionFactory:org.eclipse.viatra.query.tooling.ui.queryexplorer.handlers.LoadResourceHandler"
-            commandId="org.eclipse.viatra.query.tooling.ui.loadeiqmodel">
+            commandId="org.eclipse.viatra.query.tooling.ui.loadvqlmodel">
       </handler>
       <handler
             class="org.eclipse.viatra.query.tooling.ui.QueryLanguageExecutableExtensionFactory:org.eclipse.viatra.query.tooling.ui.queryexplorer.handlers.LoadEiqPatternHandler"
-            commandId="org.eclipse.viatra.query.tooling.ui.loadeiqpattern">
+            commandId="org.eclipse.viatra.query.tooling.ui.loadvqlpattern">
       </handler>
       <handler
             class="org.eclipse.viatra.query.tooling.ui.QueryLanguageExecutableExtensionFactory:org.eclipse.viatra.query.tooling.ui.queryexplorer.handlers.PatternRegistryShowLocationHandler"
@@ -295,7 +295,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <reference
-                        definitionId="org.eclipse.viatra.query.tooling.ui.eiq.file">
+                        definitionId="org.eclipse.viatra.query.tooling.ui.vql.file">
                   </reference>
                </visibleWhen>
             </command>
@@ -442,7 +442,7 @@
             </visibleWhen>
          </command>
          <command
-               commandId="org.eclipse.viatra.query.tooling.ui.loadeiqpattern"
+               commandId="org.eclipse.viatra.query.tooling.ui.loadvqlpattern"
                style="push">
             <visibleWhen
                   checkEnabled="false">
@@ -452,7 +452,7 @@
             </visibleWhen>
          </command>
          <command
-               commandId="org.eclipse.viatra.query.tooling.ui.loadeiqmodel"
+               commandId="org.eclipse.viatra.query.tooling.ui.loadvqmodel"
                style="push">
             <visibleWhen
                   checkEnabled="false">
@@ -579,11 +579,11 @@
             name="Load ResourceSet">
       </command>
       <command
-            id="org.eclipse.viatra.query.tooling.ui.loadeiqmodel"
+            id="org.eclipse.viatra.query.tooling.ui.loadvqlmodel"
             name="Load as model">
       </command>
       <command
-            id="org.eclipse.viatra.query.tooling.ui.loadeiqpattern"
+            id="org.eclipse.viatra.query.tooling.ui.loadvqlpattern"
             name="Load pattern(s)">
       </command>
       <command
