--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -23,7 +23,7 @@
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.evm</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.runtime.emf</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.runtime.emf.feature</module>
-		<module>../../releng/org.eclipse.viatra.target</module>
+		<module>../../releng/org.eclipse.viatra.target.core</module>
 		<module>../../releng/org.eclipse.viatra.update.core</module>
 		<module>../../releng/org.eclipse.viatra.parent</module>
 		<module>../../maven/viatra-query-runtime</module>
@@ -48,7 +48,7 @@
                     <target>
                         <artifact>
                             <groupId>org.eclipse.viatra</groupId>
-                            <artifactId>org.eclipse.viatra.target</artifactId>
+                            <artifactId>org.eclipse.viatra.target.core</artifactId>
                             <version>${viatra.main.version}</version>
                         </artifact>
                     </target>
