--- a/releng/org.eclipse.viatra.target.all/pom.xml
+++ b/releng/org.eclipse.viatra.target.all/pom.xml
@@ -3,12 +3,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>org.eclipse.viatra.parent</artifactId>
+    <artifactId>org.eclipse.viatra.parent.all</artifactId>
     <groupId>org.eclipse.viatra</groupId>
     <version>1.2.0-SNAPSHOT</version>
-    <relativePath>../../releng/org.eclipse.viatra.parent/pom.xml</relativePath>
+    <relativePath>../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
   </parent>
-  <artifactId>org.eclipse.viatra.target</artifactId>
+  <artifactId>org.eclipse.viatra.target.all</artifactId>
   <packaging>eclipse-target-definition</packaging>
   
 </project>
