--- a/examples/evm-proto/org.eclipse.viatra.transformation.evm.proto/.project
+++ b/examples/evm-proto/org.eclipse.viatra.transformation.evm.proto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.incquery.runtime.evm.proto</name>
+	<name>org.eclipse.viatra.transformation.evm.proto</name>
 	<comment></comment>
 	<projects>
 	</projects>
