[487446] Fixed string ids

--- a/query/plugins/org.eclipse.viatra.query.tooling.core/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.core/plugin.xml
@@ -11,7 +11,7 @@
          </run>
       </runtime>
       <builder
-            id="org.eclipse.incquery.tooling.core.projectbuilder">
+            id="org.eclipse.viatra.query.tooling.ui.projectbuilder">
       </builder>
    </extension>
    <extension
